--- a/css/index.css
+++ b/css/index.css
@@ -210,7 +210,7 @@
 }
 
 #profile-avatar {
-    width: 100%;
+    max-width: 100%;
     height: auto;
     border-radius: 50%;
     box-shadow: 0px 1px 15px 2px #2e2d2d;
@@ -291,4 +291,17 @@
     #cv-items-container {
         flex-direction: row;
     }
+
+
+}
+
+/* Desktop Styling */
+
+@media only screen and (min-width: 1280px) {
+
+    #items-container {
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
 }
